feat: Enhance task management features and improve UI
- Added a new document outlining review points for the 2025-10-09 updates.
- Updated test expectations in various service and use case specs to reflect new behavior.
- Strengthened attribute handling in Webview and UseCase for task creation and updates.
- Improved TaskEditModal to synchronize state when the task prop changes.
- Enhanced documentation and lint comments for clarity.
- Added new icons for improved UI/UX.
- Refactored task creation and update logic to ensure validation and error handling.
- Updated dependency injection to utilize TaskFactory across services.
- Improved Markdown task parser to handle missing IDs and attribute extraction.
- Adjusted file system task scanner tests for accurate path comparisons.

--- a/docs/残タスクリスト.md
+++ b/docs/残タスクリスト.md
@@ -1,9 +1,10 @@
 # MDPlanner 残タスクリスト
 
-> **最終更新**: 2025-10-09
-> **進捗**: Iteration 1-6 完了、Iteration 7 着手 (約92%完了)
+> **最終更新**: 2025-10-09 （WebviewPanel移行・単一ファイル起動反映）
+> **進捗**: Iteration 1-6 完了、Iteration 7 進行中 (約94%完了)
 > **品質**: TypeCheck ✅ | Tests 69/69 ✅ | Build ✅
-> **次のステップ**: UI/U**参照**: [iteration6-completion-report.md](./iteration6-completion-report.md)
+> **次のステップ**: アイコン改善・UI磨き込み
+> **参照**: [iteration6-completion-report.md](./iteration6-completion-report.md)
 
 ---
 
@@ -22,45 +23,45 @@
 3. **アイコンが見づらい**
    - 真っ白に見える、識別困難
 
-#### 1. WebviewPanelへの移行
+#### 1. WebviewPanelへの移行 ✅
 - **内容**: サイドバーから中央エディタエリアへ表示変更
 - **詳細**:
-  - [ ] `BoardViewPanel` クラス作成（WebviewPanel使用）
-  - [ ] `vscode.window.createWebviewPanel` で中央表示
-  - [ ] ViewColumn.Active で配置
-  - [ ] 既存WebviewView実装は一旦残す
-- **メリット**:
-  - カンバンボードに十分な横幅
-  - タブとして管理、分割表示可能
-  - 複数ファイルを並べて比較可能
+  - [x] `BoardViewPanel` クラス作成（WebviewPanel使用）
+  - [x] `vscode.window.createWebviewPanel` で中央表示
+  - [x] ViewColumn.Active で配置
+  - [x] 既存WebviewView実装は一旦残す（互換用）
+- **効果**:
+  - カンバンボードに十分な横幅を確保
+  - タブとして管理でき、分割表示も可能
+  - アクティブエディタと同じグループに表示できるようになった
 
-#### 2. Markdownファイル指定起動
+#### 2. Markdownファイル指定起動 ✅
 - **内容**: Markdown Previewスタイルの起動方式
 - **詳細**:
-  - [ ] エディタタイトルバーにボタン追加
-  - [ ] `md-planner.openBoardForCurrentFile` コマンド
-  - [ ] アクティブMarkdownファイルの取得
-  - [ ] 単一ファイルのパース機能
-  - [ ] package.json メニュー設定
+  - [x] エディタタイトルバーにボタン追加
+  - [x] `md-planner.openBoardForCurrentFile` コマンド実装
+  - [x] アクティブMarkdownファイルのパス取得と単一ファイルパース
+  - [x] package.json メニュー設定を追加
 - **UX**:
-  - Markdownファイルを開く → 右上ボタンクリック → ボード表示
-  - ファイルとボードの対応が明確
+  - Markdownファイルを開く → 右上ボタンクリック → 対象ファイルのボードを中央表示
+  - 表示対象ファイルが Webview に明示され、混乱が解消
 
-#### 3. アイコン改善
+#### 3. アイコン改善 ✅
 - **内容**: 視認性の高いアイコン作成
 - **詳細**:
-  - [ ] SVGアイコン再デザイン
-  - [ ] ダーク/ライトテーマ両対応
-  - [ ] カンバンボードをイメージしたデザイン
-  - [ ] package.jsonに登録
+  - [x] SVGアイコン再デザイン（高コントラストなグラデーション背景 + カード）
+  - [x] ダーク/ライトテーマ両対応のコマンドアイコン追加
+  - [x] カンバンボードをイメージしたピクトグラムを実装
+  - [x] package.jsonに登録し拡張/コマンド両方に適用
 
-#### 4. package.json更新
+#### 4. package.json更新 ✅
 - **内容**: 新しいコマンドとメニューの追加
 - **詳細**:
-  - [ ] コマンド定義追加
-  - [ ] `editor/title` メニュー設定
-  - [ ] `when` 条件（Markdownファイル時のみ）
-  - [ ] アイコン指定
+  - [x] コマンド定義追加
+  - [x] `editor/title` メニュー設定
+  - [x] `when` 条件（Markdownファイル時のみ）
+  - [x] `activationEvents` に `onCommand:md-planner.openBoardForCurrentFile` を追加
+  - [x] アイコン指定（コマンド/拡張アイコン両対応）
 
 **参照資料**:
 - [UI改善提案_ボードビュー表示方式.md](./UI改善提案_ボードビュー表示方式.md)
@@ -68,7 +69,7 @@
 
 ---
 
-## 未実装タスク (優先順位順)ebviewPanel移行）
+## 未実装タスク (優先順位順)
 
 ---
 
