refactor: update task management to use pnpm and improve code structure
- Changed task dependencies in .vscode/tasks.json from npm to pnpm for consistency.
- Removed MVP completion section from README.md and updated progress details.
- Added new import rules in documentation for better code organization.
- Enhanced TaskEditModal accessibility and keyboard navigation.
- Refactored task attribute handling in create and update use cases for clarity.
- Updated node version in mise.toml to 24.9.0 for compatibility.
- Removed unnecessary imports and improved type handling in various files.
- Deleted vsc-extension-quickstart.md as it was no longer needed.

--- a/docs/コード規約.md
+++ b/docs/コード規約.md
@@ -58,6 +58,16 @@ src/
 - 早期returnを推奨。ネストを減らす。
 - Side effectはファイル冒頭の依存注入箇所のみ許容。
 
+### Import の位置と方式（追加ルール）
+- import は原則としてファイル先頭（トップレベル）で一括して宣言してください。ファイルの途中での import（動的 import / import()）は最大限避け、明確な理由がある場合のみ許容します。
+- 動的 import を許容する例外は下記に限定します。
+  - 循環依存の解消がどうしても必要な場合
+  - プラグインやオプション機能を遅延ロードする必要がある場合
+  - 大容量ライブラリを初期ロードで読み込むと UX に悪影響がある場合
+ 例外を用いるときは、該当箇所にコメントで理由を明記し、影響範囲をコードレビューで説明してください。
+- import の並び順はグループ化して整理することを推奨します（例: 外部依存 -> 社内共通(shared) -> 同レイヤー -> 相対パス）。各グループ内はアルファベット順で統一してください。自動整列用に `eslint-plugin-import` 等の導入を検討してください。
+- Webview やランタイム固有の事情で動的ロードが必要なケースは例外として扱いますが、同様に理由の注記、ユニットテスト（ロード失敗時の挙動含む）、および手順書（docs）への記載を必須とします。
+
 ## 6. テスト指針
 - TDDを徹底: インターフェース定義 → 失敗するユニットテスト → 実装 → リファクタ。
 - ドメイン層はVitestを使用し、高速実行を最優先。
