--- a/docs/残タスクリスト.md
+++ b/docs/残タスクリスト.md
@@ -1,19 +1,78 @@
 # MDPlanner 残タスクリスト
 
-> **最終更新**: 2025-10-09 （WebviewPanel移行・単一ファイル起動反映）
-> **進捗**: Iteration 1-6 完了、Iteration 7 進行中 (約94%完了)
-> **品質**: TypeCheck ✅ | Tests 69/69 ✅ | Build ✅
-> **次のステップ**: アイコン改善・UI磨き込み
-> **参照**: [iteration6-completion-report.md](./iteration6-completion-report.md)
+> **最終更新**: 2025-10-15 （Iteration 7完了、品質改善フェーズ）
+> **進捗**: Iteration 1-7 完了 (100%)、品質改善・将来拡張フェーズ
+> **品質**: TypeCheck ✅ | Tests 69/69 ✅ | Build ✅ | Biome ✅
+> **次のステップ**: フロントエンドバリデーション・エラーハンドリング強化
+> **参照**: [iteration7-completion-report.md](./iteration7-completion-report.md)
 
 ---
 
 ## 🔄 進行中タスク
 
-### **Iteration 7: UI/UX改善（実用性向上）** 🔄 (進行中)
+### **品質改善・リファクタリング** 🔄 (進行中)
 
 #### 背景・課題
-**実際の使用で判明した問題**:
+**レビュー＆品質向上で判明した改善ポイント**:
+1. **アクセシビリティ改善**
+   - Biome a11y lintエラー解消 ✅
+   - キーボードナビゲーション対応 ✅
+2. **コード規約の整備**
+   - import ルールの明文化（ファイル先頭、動的 import 回避）✅
+3. **エラーハンドリング強化**
+   - フロントエンド事前バリデーション（due フォーマット検証等）
+   - 詳細なエラーフィードバック（Webview側でのフィールドフォーカス）
+4. **タスク編集の同期修正**
+   - TaskEditModal の状態同期バグ修正 ✅
+5. **属性ハンドリング改善**
+   - board-view-panel での due 検証と型安全性向上 ✅
+
+#### 1. コード規約整備 ✅
+- **内容**: docs/コード規約.md への import ルール追記
+- **詳細**:
+  - ✅ import はファイル先頭で一括宣言するルールを明文化
+  - ✅ 動的 import の使用を最小限に制限
+  - ✅ 例外ケース（循環依存解消、遅延ロード等）の明記
+  - ✅ import の並び順（グループ化・アルファベット順）の推奨
+- **参照**: [コード規約.md](./コード規約.md) - 5. コーディングスタイル
+
+#### 2. TaskEditModal 改善 ✅
+- **内容**: モーダルの状態同期とアクセシビリティ改善
+- **詳細**:
+  - ✅ `useEffect` による task prop と isOpen の同期実装
+  - ✅ モーダル開閉時のフォームリセット機能
+  - ✅ label 要素への htmlFor 属性追加（全7箇所）
+  - ✅ onClick 要素へのキーボードイベント対応（Escape キー対応）
+  - ✅ role/aria 属性の追加（dialog, aria-modal）
+  - ✅ Biome lint エラー完全解消
+- **ファイル**: `webview/src/components/TaskEditModal.tsx`
+
+#### 3. board-view-panel 属性ハンドリング改善 ✅
+- **内容**: 属性変換ロジックの型安全性と due バリデーション追加
+- **詳細**:
+  - ✅ `toCreateAttributes` / `toUpdateAttributes` での厳密な型変換
+  - ✅ `ensureDueDate` による due の同期バリデーション
+  - ✅ 無効な期日の場合は `task:error` で Webview へ通知
+  - ✅ 動的 import を排除し、トップレベル import に統一
+- **ファイル**: `src/interface/webview/board-view-panel.ts`
+
+#### 4. フロントエンドバリデーション（作業中）
+- **内容**: Webview 側での事前バリデーション追加
+- **詳細**:
+  - [ ] TaskCreateForm での入力バリデーション
+  - [ ] TaskEditModal での入力バリデーション
+  - [ ] due フォーマットの事前チェック
+  - [ ] tags の配列チェック
+  - [ ] バリデーションエラーのユーザーフレンドリーな表示
+- **ファイル**: 
+  - `webview/src/components/TaskCreateForm.tsx`
+  - `webview/src/components/TaskEditModal.tsx`
+
+---
+
+## 完了済み
+
+### **Iteration 7: UI/UX改善（実用性向上）** ✅ (完了: 2025-10-15)
 1. **タスクが読み込まれない**
    - 初期状態で何も表示されない
    - どのファイルを対象にしているか不明確
@@ -62,6 +121,7 @@
   - [x] `when` 条件（Markdownファイル時のみ）
   - [x] `activationEvents` に `onCommand:md-planner.openBoardForCurrentFile` を追加
   - [x] アイコン指定（コマンド/拡張アイコン両対応）
+  - [x] VS Code タスクから `mise exec` 経由でビルドするよう修正
 
 **参照資料**:
 - [UI改善提案_ボードビュー表示方式.md](./UI改善提案_ボードビュー表示方式.md)
@@ -74,6 +134,66 @@
 ---
 
 ## 完了済み
+
+### **Iteration 7: UI/UX改善（実用性向上）** ✅ (完了: 2025-10-15)
+
+#### 背景・課題
+**実際の使用で判明した問題**:
+1. **タスクが読み込まれない**
+   - 初期状態で何も表示されない
+   - どのファイルを対象にしているか不明確
+2. **サイドバーが狭すぎる**
+   - カンバンボードには横幅が必要
+   - 4列表示が実用的でない
+3. **アイコンが見づらい**
+   - 真っ白に見える、識別困難
+
+#### 1. WebviewPanelへの移行 ✅
+- **内容**: サイドバーから中央エディタエリアへ表示変更
+- **詳細**:
+  - ✅ `BoardViewPanel` クラス作成（WebviewPanel使用）
+  - ✅ `vscode.window.createWebviewPanel` で中央表示
+  - ✅ ViewColumn.Active で配置
+  - ✅ 既存WebviewView実装は一旦残す（互換用）
+- **効果**:
+  - カンバンボードに十分な横幅を確保
+  - タブとして管理でき、分割表示も可能
+  - アクティブエディタと同じグループに表示できるようになった
+
+#### 2. Markdownファイル指定起動 ✅
+- **内容**: Markdown Previewスタイルの起動方式
+- **詳細**:
+  - ✅ エディタタイトルバーにボタン追加
+  - ✅ `md-planner.openBoardForCurrentFile` コマンド実装
+  - ✅ アクティブMarkdownファイルのパス取得と単一ファイルパース
+  - ✅ package.json メニュー設定を追加
+- **UX**:
+  - Markdownファイルを開く → 右上ボタンクリック → 対象ファイルのボードを中央表示
+  - 表示対象ファイルが Webview に明示され、混乱が解消
+
+#### 3. アイコン改善 ✅
+- **内容**: 視認性の高いアイコン作成
+- **詳細**:
+  - ✅ SVGアイコン再デザイン（高コントラストなグラデーション背景 + カード）
+  - ✅ ダーク/ライトテーマ両対応のコマンドアイコン追加
+  - ✅ カンバンボードをイメージしたピクトグラムを実装
+  - ✅ package.jsonに登録し拡張/コマンド両方に適用
+
+#### 4. package.json更新 ✅
+- **内容**: 新しいコマンドとメニューの追加
+- **詳細**:
+  - ✅ コマンド定義追加
+  - ✅ `editor/title` メニュー設定
+  - ✅ `when` 条件（Markdownファイル時のみ）
+  - ✅ `activationEvents` に `onCommand:md-planner.openBoardForCurrentFile` を追加
+  - ✅ アイコン指定（コマンド/拡張アイコン両対応）
+  - ✅ VS Code タスクから `mise exec` 経由でビルドするよう修正
+
+**参照資料**:
+- [UI改善提案_ボードビュー表示方式.md](./UI改善提案_ボードビュー表示方式.md)
+- [実装計画.md](./実装計画.md) - 3.5 UI/UX改善
+
+---
 
 ### **Iteration 1: タスクインデックス構築** ✅
 
@@ -284,20 +404,93 @@
 
 **参照**: [iteration5-completion-report.md](./iteration5-completion-report.md)
 
+### **Iteration 6: リアルタイム更新** ✅ (完了: 2025-10-09)
+
+#### ✅ 1. FileSystemWatcher の実装
+- **内容**: Markdown ファイルの変更監視
+- **詳細**:
+  - ✅ `vscode.workspace.createFileSystemWatcher` による監視
+  - ✅ `**/*.md` パターンでワークスペース全体を監視
+  - ✅ `onChange` イベントでインデックス再構築
+- **ファイル**: `src/extension.ts`
+
+#### ✅ 2. Webview 自動更新
+- **内容**: ファイル変更時の Webview 自動リロード
+- **詳細**:
+  - ✅ インデックス更新後に全 Webview へ通知
+  - ✅ `board:reload` メッセージの送信
+  - ✅ タスク作成/更新/削除後の自動リロード
+- **ファイル**: 
+  - `src/interface/webview/board-view-provider.ts`
+  - `src/interface/webview/board-view-panel.ts`
+
+**参照**: [iteration6-completion-report.md](./iteration6-completion-report.md)
+
 ---
 
 ## 未実装タスク (優先順位順)
 
+### **品質改善・リファクタリング** (継続中)
+
+#### 1. フロントエンド事前バリデーション
+- **内容**: Webview 側での入力バリデーション
+- **優先度**: 高
+- **詳細**:
+  - TaskCreateForm / TaskEditModal での due フォーマット検証
+  - tags の配列チェック
+  - ユーザーフレンドリーなエラーメッセージ表示
+  - 無効な入力での送信阻止
+- **参照**: [2025-10-09_レビュー修正ポイント.md](./2025-10-09_レビュー修正ポイント.md)
+
+#### 2. 詳細なエラーフィードバック
+- **内容**: Extension からのエラー通知の強化
+- **優先度**: 中
+- **詳細**:
+  - エラーコードと詳細な payload の送信
+  - Webview 側での入力フィールドへのフォーカス制御
+  - フィールド単位のエラー表示
+- **ファイル**: `src/interface/webview/board-view-panel.ts`
+
+#### 3. ユニットテストの追加
+- **内容**: フロントエンドバリデーションのテスト
+- **優先度**: 中
+- **詳細**:
+  - バリデーション関数の単体テスト
+  - happy path + invalid due のテストケース
+  - Vitest による React コンポーネントテスト
+
+---
+
 ### **将来イテレーション (M1-M3)**
 
-#### 2. バリデーション診断のDiagnostics実装
+#### 1. ボードビューのViewModel生成UseCase
+- **内容**: `GetBoardColumnsUseCase` の実装
+- **詳細**:
+  - タスクのグループ化、ソート、フィルタロジック
+  - 列定義 (`status`既定、任意フィールド対応)
+  - ViewModelの型定義とDTO
+- **参照資料**:
+  - [実装計画.md](./実装計画.md) - 3.3 ボードビュー
+  - [仕様書ver1.md](./仕様書ver1.md) - 4.1 ボード（カンバン）
+  - [画面設計_ボードビュー.md](./画面設計_ボードビュー.md)
+
+#### 2. TaskQueryPortインターフェースの定義
+- **内容**: タスククエリ用のポートインターフェース
+- **詳細**:
+  - フィルタ/ソート/グループ化のクエリAPI定義
+  - `application/ports/task-query.ts`
+- **参照資料**:
+  - [実装計画.md](./実装計画.md) - 3.3 ボードビュー
+  - [仕様書ver1.md](./仕様書ver1.md) - 5. クエリDSL（MVP）
+
+#### 3. バリデーション診断のDiagnostics実装
   - `src/infrastructure/task-index/task-index-service.factory.ts`
 
 ---
 
 ### **将来イテレーション (M1-M3)**
 
-#### 2. バリデーション診断のDiagnostics実装
+#### 3. バリデーション診断のDiagnostics実装
 - **内容**: VS Code Diagnostics APIとの連携
 - **詳細**:
   - 日付形式/演算子の検査
@@ -308,7 +501,7 @@
   - [仕様書ver1.md](./仕様書ver1.md) - 12. バリデーション & 診断
   - [コンポーネント設計_バリデーション診断.md](./コンポーネント設計_バリデーション診断.md)
 
-#### 3. エディタ内機能（CodeLens/Hover/補完）の実装
+#### 4. エディタ内機能（CodeLens/Hover/補完）の実装
 - **内容**: Markdown Language Features統合
 - **詳細**:
   - CodeLensProvider (依存数/期日/見積の要約)
@@ -317,6 +510,22 @@
   - SemanticTokensProvider (シンタックスハイライト)
 - **参照資料**:
   - [仕様書ver1.md](./仕様書ver1.md) - 6. エディタ内機能
+
+---
+
+## 追加機能 (MVP外)
+
+- **ガントチャート** (M1)
+  - 参照: [画面設計_ガントビュー.md](./画面設計_ガントビュー.md)
+- **タイムライン** (M1)
+  - 参照: [画面設計_タイムラインビュー.md](./画面設計_タイムラインビュー.md)
+- **カレンダービュー** (M2)
+  - 参照: [画面設計_カレンダービュー.md](./画面設計_カレンダービュー.md)
+- **クエリビュー** (M1)
+  - 参照: [画面設計_クエリビュー.md](./画面設計_クエリビュー.md)
+- **繰り返しタスク (RRULE)** (M2)
+- **ICSエクスポート** (M2)
+- **クリティカルパス** (M3)
 
 ---
 
@@ -345,18 +554,25 @@
 5. ✅ ~~**ドラッグ&ドロップ機能** の実装~~ (Iteration 5 完了)
 6. ✅ ~~**タスク編集モーダル** の実装~~ (Iteration 5 完了)
 7. ✅ ~~**ファイルウォッチャー** によるリアルタイム更新~~ (Iteration 6 完了)
+8. ✅ ~~**WebviewPanel への移行** と **Markdownファイル指定起動**~~ (Iteration 7 完了)
+9. ✅ ~~**アイコン改善** と **アクセシビリティ改善**~~ (品質改善フェーズ 完了)
+10. ✅ ~~**コード規約整備** と **属性ハンドリング改善**~~ (品質改善フェーズ 完了)
 
-### 🎊 MVP完成！次は将来拡張
-- **バリデーション診断** (M1)
-- **エディタ内機能** (CodeLens/Hover/補完) (M1)
-- **追加ビュー** (ガント、タイムライン、クエリ) (M1-M2)
-
+### 🎊 MVP完成！現在は品質向上フェーズ
+- **次の優先タスク**:
+  1. フロントエンド事前バリデーション（UX向上）
+  2. 詳細なエラーフィードバック（デバッグ性向上）
+  3. ユニットテストの追加（保守性向上）
+- **将来の拡張**:
+  - バリデーション診断 (M1)
+  - エディタ内機能 (CodeLens/Hover/補完) (M1)
+  - 追加ビュー (ガント、タイムライン、クエリ) (M1-M2)
 
 ---
 
 ## 📊 実装状況サマリー
 
-### 完了済み (6/6 MVP Iterations) 🎉
+### 完了済み (7/7 MVP Iterations + 品質改善) 🎉
 - ✅ **Iteration 1**: タスクインデックス構築 (100%)
 - ✅ **Iteration 2**: タスクCRUDとパッチ機能 (100%)
 - ✅ **Iteration 3**: ボードビュー基盤 (100%)
@@ -365,16 +581,30 @@
   - 詳細レポート: [iteration5-completion-report.md](./iteration5-completion-report.md)
 - ✅ **Iteration 6**: リアルタイム更新 (100%)
   - 詳細レポート: [iteration6-completion-report.md](./iteration6-completion-report.md)
+- ✅ **Iteration 7**: UI/UX改善（実用性向上）(100%)
+  - WebviewPanel移行、Markdownファイル指定起動、アイコン改善
+- ✅ **品質改善**: コード規約、アクセシビリティ、属性ハンドリング (進行中)
+  - TaskEditModal の Biome エラー解消
+  - import ルールの明文化
+  - board-view-panel の due バリデーション
 
-### 🎊 **MVP完成！** 
-**全コア機能が実装完了しました**
+### 🎊 **MVP完成 + 品質向上中！** 
+**全コア機能が実装完了し、現在は品質とUX向上に注力中**
 
 ### 品質指標
-- **テストカバレッジ**: 69/69 (100%) ← 62から+7
+- **テストカバレッジ**: 69/69 (100%)
 - **TypeScript型エラー**: 0件
-- **Lintエラー**: 0件 (9件のa11y警告は非ブロッキング)
-- **実装ファイル数**: 87+ファイル ← 85から+2
+- **Biomeエラー**: 0件 ✅
+- **実装ファイル数**: 87+ファイル
 - **Webviewビルドサイズ**: 261KB (gzip: 80KB)
+
+### 最近の改善内容 (2025-10-15)
+- ✅ TaskEditModal の Biome lint エラー完全解消（a11y 対応）
+- ✅ label と input の適切な紐付け（htmlFor 追加）
+- ✅ キーボードナビゲーション対応（Escape キー等）
+- ✅ role/aria 属性の追加（アクセシビリティ向上）
+- ✅ コード規約への import ルール追記
+- ✅ board-view-panel の due バリデーションと型安全性向上
 
 ---
 
